# eyelink_min_distance_etra_lbw

./: .gitignore  README.md  extract_results.py  jva_capture.py  main.py  pyproject.toml
data/: 16mm_461_01.asc  16mm_461_01_calibrations.txt  16mm_461_01_metadata.txt  16mm_461_01_recordings.txt  16mm_461_01_samples.csv  16mm_461_01_settings.json  16mm_461_01_validations.txt  16mm_864_01.asc  16mm_864_01_calibrations.txt  16mm_864_01_metadata.txt  16mm_864_01_recordings.txt  16mm_864_01_samples.csv  16mm_864_01_settings.json  16mm_864_01_validations.txt  16mm_mh_01.asc  16mm_mh_01_calibrations.txt  16mm_mh_01_metadata.txt  16mm_mh_01_recordings.txt  16mm_mh_01_samples.csv  16mm_mh_01_settings.json  16mm_mh_01_validations.txt  16mm_r_01.asc  16mm_r_01_calibrations.txt  16mm_r_01_metadata.txt  16mm_r_01_recordings.txt  16mm_r_01_samples.csv  16mm_r_01_settings.json  16mm_r_01_validations.txt  25mm_461_02.asc  25mm_461_02_calibrations.txt  25mm_461_02_metadata.txt  25mm_461_02_recordings.txt  25mm_461_02_samples.csv  25mm_461_02_settings.json  25mm_461_02_validations.txt  25mm_864_01.asc  25mm_864_01_calibrations.txt  25mm_864_01_metadata.txt  25mm_864_01_recordings.txt  25mm_864_01_samples.csv  (+44 more)
data/other_data/: 1_settings.json  25mm_r_01_settings.json  30cn_settings.json  d_settings.json  rrrrr_settings.json  t_settings.json  test2_settings.json  test3_settings.json  test4_settings.json  test5_settings.json  test_100_settings.json  test_settings.json  ttttt_settings.json  two_settings.json
